# leptos-drag-drop

./: Cargo.toml  README.md  Trunk.gh-pages.toml  Trunk.toml  index.html
.github/workflows/: build_page.yml
src/: drag_context.rs  drag_item.rs  draggable.rs  drop_zone.rs  main.rs
static/: styles.scss
