[package]
name = "leptos-drag-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
rand = "0.8.5"
web-sys = { version = "0.3.63", features = ["CssStyleDeclaration", "HtmlImageElement"] }
leptos = { version="0.4.2", features = ["csr"] }
wasm-bindgen = "0.2.86"
gloo = "0.9.0"
gloo-storage = "0.2.2"
gloo-timers = { version = "0.2.6", features = ["futures"] }
